UI: fixed some UI glitches (#500)
## What does this PR do ?

- Fix dropdown menu which was too narrow
- Fix item height in left side tree

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -63,3 +63,5 @@ $sidebar-width: 240px;
 //   ==========================================================================
 
 $container-width: 1150px;
+
+$sidenav-item-height: 32px;
